    [RF-13827] - Selection mode simple and multiple in ExtendedDataTable throws JS error in Chrome 36
    [RF-13830] - Tooltip not attached must specify target=""
    [RF-13838] - ExtendedPartialViewContext.java is missing method setPartialRequest
    [RF-13840] - a4j:jsFunction - oncomplete is called twice
    [RF-13843] - rich:fileUpload should use feature detection for File API

    Component Upgrade
    [RF-13475] - NullPointException when using Richfaces with ehcache
    [RF-13841] - Upgrade Selenium to 2.43.1

    Enhancement
    [RF-13414] - The showcase chart demo of event handling renders seemingly redundant info
    [RF-13831] - Review page fragments
    [RF-13832] - Built-in filtering and sorting inside richcollapsibleSubTable
    [RF-13833] - Doc for r:tree selectionChangeListener attribute is misplaced with toggleListener attribute doc

    Task
    [RF-13834] - Alias the javascript method RichFaces.component to RichFaces.$
    [RF-13835] - Revert package and class names changes in 4.5
    [RF-13837] - Add "chart" prefix to chart components

4.5.0.Beta2
-----------

    Bug
    [RF-11090] - rich:collapsibleSubTable cannot be nested
    [RF-11656] - Nested collapsibleSubTable always expanded
    [RF-12399] - Showcase: rich:contextmenu cannot find image
    [RF-13081] - Facets "disabled" not working for dataScroller
    [RF-13645] - contextMenu for extendedDataTable breaks after ajax render of contextMenu
    [RF-13655] - Popup Panel autosize does not work when its content is dynamically updated
    [RF-13708] - Photoalbum: refresh over index page throws error
    [RF-13722] - Document CDK Maven Changes for 4.5
    [RF-13747] - a4j:commandLink does not have a default event name
    [RF-13781] - Enable RichFaces to be built with the jdk6
    [RF-13783] - Placeholder: attribute styleClass doesn't work inside inplace input and inplace select
    [RF-13787] - Push with EAP 6.3 not using WebSockets