@@ -25,7 +25,7 @@
     <groupId>org.richfaces</groupId>
     <artifactId>richfaces-cache-bom</artifactId>
     <packaging>pom</packaging>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0.CR1</version>
     <name>RichFaces BOM</name>
 
     <description>
