@@ -4,7 +4,7 @@
 
     <groupId>org.richfaces</groupId>
     <artifactId>richfaces-build-resources</artifactId>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0.CR1</version>
     <name>RichFaces Build Resources</name>
     
     <description>
@@ -28,7 +28,7 @@
     </developers>
 
     <properties>
-        <version.richfaces>4.5.0-SNAPSHOT</version.richfaces>
+        <version.richfaces>4.5.0.CR1</version.richfaces>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
