@@ -10,7 +10,7 @@ public class FundamentalTestConfiguration implements DroneConfiguration<Fundamen
 
     private String richfacesVersion;
     private Boolean servletContainerSetup;
-    private String currentBuildRichfacesVersion = "4.5.0-SNAPSHOT";
+    private String currentBuildRichfacesVersion = "4.5.0.CR1";
     private String jsfProvider;
     private String jsfImplementation;
     private String container;
