@@ -25,7 +25,7 @@
     <groupId>org.richfaces</groupId>
     <artifactId>richfaces-build</artifactId>
     <packaging>pom</packaging>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0.CR1</version>
     <name>RichFaces Build Version Management</name>
 
     <description>
@@ -57,8 +57,8 @@
 
     <properties>
         <!-- Base Dependencies Versions -->
-        <version.richfaces>4.5.0-SNAPSHOT</version.richfaces>
-        <version.cdk>4.5.0-SNAPSHOT</version.cdk>
+        <version.richfaces>4.5.0.CR1</version.richfaces>
+        <version.cdk>4.5.0.CR1</version.cdk>
         <version.jboss-javaee>3.0.2.Final</version.jboss-javaee>
 
         <!-- Project Versions -->
@@ -170,18 +170,18 @@
             <dependency>
                 <groupId>org.richfaces</groupId>
                 <artifactId>richfaces</artifactId>
-                <version>4.5.0-SNAPSHOT</version>
+                <version>4.5.0.CR1</version>
             </dependency>
             <dependency>
                 <groupId>org.richfaces</groupId>
                 <artifactId>richfaces-push-depchain</artifactId>
-                <version>4.5.0-SNAPSHOT</version>
+                <version>4.5.0.CR1</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.richfaces</groupId>
                 <artifactId>richfaces-push-native-depchain</artifactId>
-                <version>4.5.0-SNAPSHOT</version>
+                <version>4.5.0.CR1</version>
                 <type>pom</type>
             </dependency>
             <dependency>
