@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
         <relativePath>../../</relativePath>
     </parent>
 
