@@ -4,13 +4,13 @@
     <groupId>org.richfaces.cdk</groupId>
     <artifactId>richfaces-application</artifactId>
     <name>Test component annotations</name>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0.CR1</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-root-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
         <relativePath>../../../../build/parent/pom.xml</relativePath>
     </parent>
 
@@ -19,7 +19,7 @@
             <plugin>
                 <groupId>org.richfaces.cdk</groupId>
                 <artifactId>maven-richfaces-resources-plugin</artifactId>
-                <version>4.5.0-SNAPSHOT</version>
+                <version>4.5.0.CR1</version>
                 <executions>
                     <execution>
                         <id>process</id>
