@@ -36,7 +36,7 @@ mvn clean richfaces-resources:process -Dskins=blueSky -DstaticResourceMappingFil
 <plugin>
     <groupId>org.richfaces.cdk</groupId>
     <artifactId>maven-richfaces-resources-plugin</artifactId>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0.CR1</version>
     <configuration>
         <skins>
             <skin>blueSky</skin>
