@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-components-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
