@@ -27,13 +27,13 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>org.richfaces</groupId>
     <artifactId>richfaces-components-parent</artifactId>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0.CR1</version>
     <packaging>pom</packaging>
     <name>RichFaces UI Components Parent</name>
 
@@ -43,7 +43,7 @@
     </modules>
 
     <properties>
-        <version.richfaces>4.5.0-SNAPSHOT</version.richfaces>
+        <version.richfaces>4.5.0.CR1</version.richfaces>
     </properties>
 
     <build>
