@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-components-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -16,7 +16,7 @@
     <properties>
         <faces.resources.dir>${project.build.outputDirectory}/META-INF/resources</faces.resources.dir>
         <resource.mappings.dir>${project.build.outputDirectory}/META-INF/richfaces</resource.mappings.dir>
-        <version.richfaces.resource.plugin>4.5.0-SNAPSHOT</version.richfaces.resource.plugin>
+        <version.richfaces.resource.plugin>4.5.0.CR1</version.richfaces.resource.plugin>
     </properties>
 
     <dependencies>
