@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
     </parent>
 
     <artifactId>richfaces-core</artifactId>
@@ -36,7 +36,7 @@
     <description>The RichFaces core framework.</description>
 
     <properties>
-        <version.richfaces>4.5.0-SNAPSHOT</version.richfaces>
+        <version.richfaces>4.5.0.CR1</version.richfaces>
     </properties>
 
     <dependencies>
