@@ -424,12 +424,12 @@ public class CoreDeployment extends BaseDeployment {
     }
     
     public void withA4jComponents() {
-        addMavenDependency("org.richfaces:richfaces-a4j:4.5.0-SNAPSHOT");
+        addMavenDependency("org.richfaces:richfaces-a4j:4.5.0.CR1");
         excludeMavenDependency("richfaces-core");
     }
     
     public void withRichComponents() {
-        addMavenDependency("org.richfaces:richfaces:4.5.0-SNAPSHOT");
+        addMavenDependency("org.richfaces:richfaces:4.5.0.CR1");
         excludeMavenDependency("richfaces-core");
     }
 
