@@ -27,18 +27,18 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>components-demo</artifactId>
     <groupId>org.richfaces.examples</groupId>
     <name>RichFaces Example: Component </name>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0.CR1</version>
     <packaging>war</packaging>
 
     <properties>
-        <version.richfaces>4.5.0-SNAPSHOT</version.richfaces>
+        <version.richfaces>4.5.0.CR1</version.richfaces>
     </properties>
 
     <dependencies>
