@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-parent</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.5.0.CR1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -17,7 +17,7 @@
     <name>RichFaces Showcase</name>
 
     <properties>
-        <version.rf4.ui>4.5.0-SNAPSHOT</version.rf4.ui>
+        <version.rf4.ui>4.5.0.CR1</version.rf4.ui>
         <dependency.scope>compile</dependency.scope>
         <container.classifier>tomcat6</container.classifier>
         <container.resources>src/main/resources-tomcat</container.resources>
